--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -4,24 +4,31 @@
 {% block body_block %}
     <form class="gp-form" role="form" method="post" action=".">
         {% csrf_token %}
+        <div class="form-group">
+            <label for="id_old_password">Old password:</label>
+            <input class="form-control" autofocus="" id="id_old_password"
+                   name="old_password" type="password"
+                   required="">
+        </div>
+        <div class="form-group">
+            <label for="id_new_password1">New password:</label>
+            <input class="form-control" id="id_new_password1" name="new_password1"
+                   type="password" required=""> <span
+                class="helptext"></span>
+        </div>
+        <div class="form-group">
+            <ul>
+                <li>Your password can't be too similar to your other personal information.</li>
+                <li>Your password must contain at least 8 characters.</li>
+                <li>Your password can't be a commonly used password.</li>
+                <li>Your password can't be entirely numeric.</li>
+            </ul>
+        </div>
+        <div class="form-group">
 
-        <p><label for="id_old_password">Old password:</label> <input autofocus="" id="id_old_password"
-                                                                     name="old_password" type="password"
-                                                                     required=""></p>
-        <p><label for="id_new_password1">New password:</label> <input id="id_new_password1" name="new_password1"
-                                                                      type="password" required=""> <span
-                class="helptext"></span></p>
-        <ul>
-            <li>Your password can't be too similar to your other personal information.</li>
-            <li>Your password must contain at least 8 characters.</li>
-            <li>Your password can't be a commonly used password.</li>
-            <li>Your password can't be entirely numeric.</li>
-        </ul>
-        <p></p>
-        <p><label for="id_new_password2">New password confirmation:</label> <input id="id_new_password2"
-                                                                                   name="new_password2"
-                                                                                   type="password" required=""></p>
-
-        <input type="submit" value="{% trans 'Submit' %}"/>
+            <label for="id_new_password2">New password confirmation:</label>
+            <input class="form-control" id="id_new_password2" name="new_password2" type="password" required="">
+        </div>
+        <input class="btn btn-default" type="submit" value="{% trans 'Submit' %}"/>
     </form>
 {% endblock %}
