--- a/static/app1/CSS/style.css
+++ b/static/app1/CSS/style.css
@@ -128,6 +128,12 @@ div.gp-div-post-summery, div.gp-div-post-full {
     color: #777;
 }
 
+.card-text-date {
+    font-size: 14px;
+    margin: 0;
+    color: #777;
+}
+
 .gp-desc .card-text-member {
     font-size: 14px;
 }
@@ -246,6 +252,27 @@ Profile page
 .gp-button-panel {
     margin: 10px 0;
 
+}
+
+.gp-tab-pane {
+    padding: 10px 20px;
+}
+
+.gp-narrow-width {
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.gp-list-group-tour .gp-text-title {
+    display: block;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.gp-list-group-tour .gp-text-date {
+    display: block;
+    font-size: 15px;
+    color: #777;
 }
 
 /**
