--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -65,9 +65,14 @@
                             <li><a href="{% url 'division_detail' "barisal" %}">Barisal</a></li>
                         </ul>
                     </li>
-                    <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
-                    {#                    <li><a href="/admin/">{{ user.username }}</a></li>#}
-                    {#                    Source: http://stackoverflow.com/questions/806835/django-redirect-to-previous-page-after-login#}
+                    {# <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>#}
+
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'user_profile' user.username %}">{{ user.username }}</a></li>
+                    {% endif %}
+
+                    {# <li><a href="/admin/">{{ user.username }}</a></li>#}
+                    {# Source: http://stackoverflow.com/questions/806835/django-redirect-to-previous-page-after-login#}
                     <li><a href="{% url 'auth_logout' %}">Logout</a></li>
 
                 {% else %}
