--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -63,6 +63,7 @@
                             <li><a href="{% url 'division_detail' "sylhet" %}">Sylhet</a></li>
                             <li><a href="{% url 'division_detail' "khulna" %}">Khulna</a></li>
                             <li><a href="{% url 'division_detail' "barisal" %}">Barisal</a></li>
+                            <li><a href="{% url 'division_detail' "rangpur" %}">Rangpur</a></li>
                         </ul>
                     </li>
                     {# <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>#}
